--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="assets/css/main1.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -47,7 +47,10 @@
 			<div class="inner">
 				<div class="row">
 					<div class="col">
-						<button type="submit"><i class="fa fa-search"></i></button>
+						<h2>Search Here:</h2>
+					</div>
+					<div class="col sr">
+						<input type="text" placeholder="Search">
 					</div>
 					<div class="col">
 						<select name="srch" id="srch">
@@ -64,8 +67,8 @@
 							<option value="banner" class="l1">Banners</option>
 						</select>
 					</div>
-					<div class="col sr">
-						<input type="text" placeholder="Search">
+                                        <div class="col">
+						<button type="submit"><i class="fa fa-search"></i></button>
 					</div>
 				</div><br>
 				<header>
@@ -147,36 +150,6 @@
 			<div class="inner">
 				<div class="row">
 					<div class="col">
-						<div class="slideshow-container">
-
-							<!-- Full-width images with number and caption text -->
-							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bahubali2.jpg" width="450" height="600"></a>
-							</div>
-							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bharat.jpg" width="450" height="600"></a>
-							</div>
-							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bajrangi.jpg" width="450" height="600"></a>
-							</div>
-
-							<!-- Next and previous buttons -->
-							<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-							<a class="next" onclick="plusSlides(1)">&#10095;</a>
-						</div>
-						<br>
-
-						<!-- The dots/circles -->
-						<div style="text-align:center">
-							<span class="dot" onclick="currentSlide(1)"></span>
-							<span class="dot" onclick="currentSlide(2)"></span>
-							<span class="dot" onclick="currentSlide(3)"></span>
-						</div>
-					</div>
-					<div class="col">
-						&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-					</div>
-					<div class="col">
 						<h2>Film - Stats:</h2>
 						<hr>
 						<ul class="cn">
@@ -205,6 +178,33 @@
 									<h4>Verdict Of The Movies</h4>
 								</a></li>
 						</ul>
+					</div>
+					<div class="col">
+						<div class="slideshow-container">
+
+							<!-- Full-width images with number and caption text -->
+							<div class="mySlides fade">
+								<a href="detail.html"><img src="images/bahubali2.jpg" width="450" height="600"></a>
+							</div>
+							<div class="mySlides fade">
+								<a href="detail.html"><img src="images/bharat.jpg" width="450" height="600"></a>
+							</div>
+							<div class="mySlides fade">
+								<a href="detail.html"><img src="images/bajrangi.jpg" width="450" height="600"></a>
+							</div>
+
+							<!-- Next and previous buttons -->
+							<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+							<a class="next" onclick="plusSlides(1)">&#10095;</a>
+						</div>
+						<br>
+
+						<!-- The dots/circles -->
+						<div style="text-align:center">
+							<span class="dot" onclick="currentSlide(1)"></span>
+							<span class="dot" onclick="currentSlide(2)"></span>
+							<span class="dot" onclick="currentSlide(3)"></span>
+						</div>
 					</div>
 				</div>
 			</div>
