--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<div class="inner">
 				<div class="row">
 					<div class="col">
-						<h2>Search Here:</h2>
+						<h3>Search Here:</h3>
 					</div>
 					<div class="col sr">
 						<input type="text" placeholder="Search">
@@ -67,8 +67,8 @@
 							<option value="banner" class="l1">Banners</option>
 						</select>
 					</div>
-                                        <div class="col">
-						<button type="submit"><i class="fa fa-search"></i></button>
+					<div class="col">
+						<button type="submit"><i class="fa fa-search">&nbsp;&nbsp;Search</i></button>
 					</div>
 				</div><br>
 				<header>
@@ -148,7 +148,7 @@
 		</section>
 		<section class="wrapper style2">
 			<div class="inner">
-				<div class="row">
+				<div class="row">	
 					<div class="col">
 						<h2>Film - Stats:</h2>
 						<hr>
@@ -180,22 +180,23 @@
 						</ul>
 					</div>
 					<div class="col">
+						&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+					</div>
+					<div class="col">
 						<div class="slideshow-container">
-
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bahubali2.jpg" width="450" height="600"></a>
+								<a href="detail.html"><img src="images/bahubali2.jpg" width="350" height="550"></a>
 							</div>
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bharat.jpg" width="450" height="600"></a>
+								<a href="detail.html"><img src="images/bharat.jpg" width="350" height="550"></a>
 							</div>
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bajrangi.jpg" width="450" height="600"></a>
+								<a href="detail.html"><img src="images/bajrangi.jpg" width="350" height="550"></a>
 							</div>
-
+	
 							<!-- Next and previous buttons -->
-							<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-							<a class="next" onclick="plusSlides(1)">&#10095;</a>
+							
 						</div>
 						<br>
 
