--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<!-- Header -->
 	<header id="header">
-		<h1><a href="index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
+		<h1 class="name"><a href="index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
 		<a href="#menu">Menu</a>
 	</header>
 
@@ -55,16 +55,16 @@
 					<div class="col">
 						<select name="srch" id="srch">
 							<option value="all" class="l1">All </option>
-							<option value="actor" class="l1">Actors</option>
-							<option value="movies" class="l1">Movies</option>
+							<option value="actor" class="l1">Movies</option>
+							<option value="movies" class="l1">Actors</option>
 							<option value="movies" class="l1">Directors</option>
-							<option value="movies" class="l1">Producers</option>
+							<option value="movies" class="l1">Producers/option>
+							<option value="movies" class="l1">Banners</option>
 							<option value="movies" class="l1">Story</option>
 							<option value="movies" class="l1">Screenplay</option>
+							<option value="movies" class="l1">Dialogists</option>
 							<option value="movies" class="l1">Musicians</option>
 							<option value="movies" class="l1">Lyricists</option>
-							<option value="movies" class="l1">Dialogists</option>
-							<option value="banner" class="l1">Banners</option>
 						</select>
 					</div>
 					<div class="col">
@@ -140,7 +140,7 @@
 									<div class="icon fa-play"></div>
 								</div>
 							</div>
-							<a href="detailhtml" class="link"><span>Click Me</span></a>
+							<a href="detail.html" class="link"><span>Click Me</span></a>
 						</div>
 					</div>
 				</div>
@@ -168,11 +168,11 @@
 							<li><a href="budget.html">
 									<h4>Budget Of The Movies </h4>
 								</a></li>
-							<li><a href="footfalls.html">
-									<h4>Domestic Footfalls Of Movies</h4>
-								</a></li>
 							<li><a href="screen.html">
 									<h4>Domestic Number Of Screens </h4>
+								</a></li>
+							<li><a href="footfalls.html">
+									<h4>Domestic Footfalls Of Movies</h4>
 								</a></li>
 							<li><a href="verdict.html">
 									<h4>Verdict Of The Movies</h4>
@@ -214,7 +214,7 @@
 			<div class="inner">
 				<header>
 					<a href="past.html">
-						<h2>Movies Released Today In The Past:</h2>
+						<h2>Movies Released Today In Past:</h2>
 					</a>
 					<hr>
 				</header>
