--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<option value="actor" class="l1">Movies</option>
 							<option value="movies" class="l1">Actors</option>
 							<option value="movies" class="l1">Directors</option>
-							<option value="movies" class="l1">Producers/option>
+							<option value="movies" class="l1">Producers</option>
 							<option value="movies" class="l1">Banners</option>
 							<option value="movies" class="l1">Story</option>
 							<option value="movies" class="l1">Screenplay</option>
