Max final changes

--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
 							<option value="movies" class="l1">Directors</option>
 							<option value="movies" class="l1">Producers</option>
 							<option value="movies" class="l1">Banners</option>
-							<option value="movies" class="l1">Story</option>
-							<option value="movies" class="l1">Screenplay</option>
+							<option value="movies" class="l1">Story Writers</option>
+							<option value="movies" class="l1">Screenwriters</option>
 							<option value="movies" class="l1">Dialogists</option>
 							<option value="movies" class="l1">Musicians</option>
 							<option value="movies" class="l1">Lyricists</option>
 						</select>
 					</div>
 					<div class="col">
-						<button type="submit"><i class="fa fa-search">&nbsp;&nbsp;Search</i></button>
+						<button type="submit" class="bttn"><i class="fa fa-search">&nbsp;&nbsp;</i></button>
 					</div>
 				</div><br>
 				<header>
@@ -154,7 +154,7 @@
 						<hr>
 						<ul class="cn">
 							<li><a href="calender.html">
-									<h4>Movies Release Date Calender</h4>
+									<h4>Release Date Calender Of Movies</h4>
 								</a></li>
 							<li><a href="domestic.html">
 									<h4>Domestic Box Office Collection</h4>
@@ -180,19 +180,19 @@
 						</ul>
 					</div>
 					<div class="col">
-						&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+						&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 					</div>
 					<div class="col">
 						<div class="slideshow-container">
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bahubali2.jpg" width="350" height="550"></a>
+								<a href="detail.html"><img src="images/bahubali2.jpg" width="320" height="550"></a>
 							</div>
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bharat.jpg" width="350" height="550"></a>
+								<a href="detail.html"><img src="images/bharat.jpg" width="320" height="550"></a>
 							</div>
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bajrangi.jpg" width="350" height="550"></a>
+								<a href="detail.html"><img src="images/bajrangi.jpg" width="320" height="550"></a>
 							</div>
 	
 							<!-- Next and previous buttons -->
@@ -327,7 +327,7 @@
 				<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
 			</ul>
-			&copy; Selfmade Design: <a href="#">On demand </a>. Images: <a href="https://unsplash.com">Coverr</a>.
+			&copy; Techmarket Design: <a href="#">On Demand </a>. Images: <a href="https://unsplash.com">Coverr</a>.
 			Video: <a href="https://coverr.co">Coverr</a>.
 		</div>
 	</footer>
