--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 				<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
 			</ul>
-			&copy; Techmarket Design: <a href="#">On Demand </a>. Images: <a href="https://unsplash.com">Coverr</a>.
+			&copy; Design by: <a href="#">Techmarket </a>. Images: <a href="https://unsplash.com">Coverr</a>.
 			Video: <a href="https://coverr.co">Coverr</a>.
 		</div>
 	</footer>
