name size changes

--- a/latest.html
+++ b/latest.html
@@ -12,11 +12,10 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
-detail
 
 		<!-- Header -->
 			<header id="header">
-				<h1><a href="index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
+				<h1 class="name"><a href="index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
 				<a href="#menu">Menu</a>
 			</header>
 
