--- a/index.html
+++ b/index.html
@@ -182,17 +182,17 @@
 					<div class="col">
 						&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 					</div>
-					<div class="col">
+					<div class="col car">
 						<div class="slideshow-container">
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bahubali2.jpg" width="340" height="550"></a>
+								<a href="detail.html"><img src="images/bahubali2.jpg" width="320" height="550"></a>
 							</div>
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bharat.jpg" width="340" height="550"></a>
+								<a href="detail.html"><img src="images/bharat.jpg" width="320" height="550"></a>
 							</div>
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bajrangi.jpg" width="340" height="550"></a>
+								<a href="detail.html"><img src="images/bajrangi.jpg" width="320" height="550"></a>
 							</div>
 	
 							<!-- Next and previous buttons -->
@@ -327,7 +327,7 @@
 				<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
 			</ul>
-			&copy; Design by: <a href="#">Techmarket </a>. Images: <a href="https://unsplash.com">Coverr</a>.
+			&copy; Techmarket Design: <a href="#">On Demand </a>. Images: <a href="https://unsplash.com">Coverr</a>.
 			Video: <a href="https://coverr.co">Coverr</a>.
 		</div>
 	</footer>
