--- a/calender.html
+++ b/calender.html
@@ -5,165 +5,242 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Film - Stats: Movies Release Calender</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	</head>
-	<body>
 
-		<!-- Header -->
-			<header id="header">
-				<h1><a href="index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
-				<a href="#menu">Menu</a>
-			</header>
+<head>
+	<title>Film - Stats: Movies Release Calender</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
-		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About Us </a></li>
-					<li><a href="login.html">Login/Register</a></li>
+<body>
+
+	<!-- Header -->
+	<header id="header">
+		<h1><a href="index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
+		<a href="#menu">Menu</a>
+	</header>
+
+	<!-- Nav -->
+	<nav id="menu">
+		<ul class="links">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About Us </a></li>
+			<li><a href="login.html">Login/Register</a></li>
+		</ul>
+	</nav>
+	<div id="main">
+		<!-- Two -->
+		<section class="wrapper style2">
+			<div class="inner">
+				<h2>Movies Release Date Calender:</h2>
+				<hr>
+				<div class="row">
+					<div class="col select">
+						<select name="year" class="addselect" id="year">
+							<option value="2k21" class="l1">Year 2021</option>
+							<option value="2k20" class="l1"> 2020</option>
+							<option value="2k19" class="l1"> 2019</option>
+							<option value="2k18" class="l1"> 2018</option>
+							<option value="2k17" class="l1"> 2017</option>
+							<option value="2k16" class="l1"> 2016</option>
+							<option value="2k15" class="l1"> 2015</option>
+							<option value="2k14" class="l1"> 2014</option>
+							<option value="2k13" class="l1"> 2013</option>
+							<option value="2k12" class="l1"> 2012</option>
+							<option value="2k11" class="l1"> 2011</option>
+							<option value="2k10" class="l1"> 2010</option>
+						</select><br>
+					</div>
+				</div>
+				<table class="tab12">
+					<tr>
+						<th class="ww">S.No.</th>
+						<th class="ww ">Poster</th>
+						<th class="ww">Movie Name</th>
+						<th class="ww">Release Date</th>
+					</tr>
+					<tr>
+						<td>1.</td>
+						<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="images/ramp.jpg" data-src="images/ramp.jpg" width="50"
+									height="70" border="0"></a></td>
+						<td><a href="detail.html">Ramprasad Ki Tehrvi</a></td>
+						<td>1st January</td>
+					</tr>
+					<tr>
+						<td>2.</td>
+						<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/kaag1.jpg" width='50' height='70' /></noscript><img
+									class=" lazyloaded" src="images/kaag1.jpg" data-src="images/kaag1.jpg" width="50"
+									height="70" border="0"></a></td>
+						<td><a href="detail.html"></a>Kaagaz</a></td>
+						<td>7th January</td>
+					</tr>
+					<tr>
+						<td>3.</td>
+						<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/12.jpg" width='50' height='70' border="0" /></noscript><img
+									class=" lazyloaded" src="images/12.jpg" data-src="images/12.jpg" width="50"
+									height="70" border="0"></a></td>
+						<td><a href="detail.html">12 'O' clock</a></td>
+						<td>8th January</td>
+					</tr>
+					<tr>
+						<td>4.</td>
+						<td>The Power</td>
+						<td>14th January</td>
+					</tr>
+					<tr>
+						<td>5.</td>
+						<td>Tribhanga</td>
+						<td>15th January</td>
+					</tr>
+					<tr>
+						<td>5.</td>
+						<td>Madam Chief Minister</td>
+						<td>22nd January</td>
+					</tr>
+					<tr>
+						<td>6.</td>
+						<td>Aadhar</td>
+						<td>15th February</td>
+					</tr>
+					<tr>
+						<td>7.</td>
+						<td>XYZ</td>
+						<td>30th February</td>
+					</tr>
+					<tr>
+						<td>8.</td>
+						<td>ABC</td>
+						<td>13th March</td>
+					</tr>
+					<tr>
+						<td>9.</td>
+						<td>Aadhar</td>
+						<td>15th February</td>
+					</tr>
+				</table>
+				<div class="wrp">
+					<div class="row">
+						<div class="col">
+							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="images/ramp.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b>1.</b>Ramprasad Ki Tehrvi<br>
+								<b>Release Date:</b>1 Jan 2021<br>
+								<b>Screens:</b> 3850<br>
+								<b>Nett Gross:</b> 50612000
+							</p>
+						</div>
+					</div><br>
+					<div class="row">
+						<div class="col">
+							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="images/kaag1.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b>2.</b>Kaagaz<br>
+								<b>Release Date:</b>7 Jan 2021<br>
+								<b>Screens:</b> 3850<br>
+								<b>Nett Gross:</b> 50612000
+							</p>
+						</div>
+					</div><br>
+					<div class="row">
+						<div class="col">
+							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="images/12.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b>1.</b>12 'O' Clock<br>
+								<b>Release Date:</b>8 Jan 2021<br>
+								<b>Screens:</b> 3850<br>
+								<b>Nett Gross:</b> 50612000
+							</p>
+						</div>
+					</div><br>
+					<div class="row">
+						<div class="col">
+							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="images/simmba.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b>1.</b>Thugs Of Hindustan<br>
+								<b>Release Date:</b>2 Oct 2019<br>
+								<b>Screens:</b> 3850<br>
+								<b>Nett Gross:</b> 50612000
+							</p>
+						</div>
+					</div><br>
+				</div>
+			</div>
+		</section>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="inner">
+				<div class="flex flex-3">
+					<div class="col">
+						<h3>Box Office </h3>
+						<ul class="alt">
+							<li><a href="#">Magazine</a></li>
+							<li><a href="#">Numbers</a></li>
+							<li><a href="#">Movie Calender</a></li>
+							<li><a href="#">Subscribe</a></li>
+						</ul>
+					</div>
+					<div class="col">
+						<h3>Topics</h3>
+						<ul class="alt">
+							<li><a href="#">From the Magazine</a></li>
+							<li><a href="#">Tracking & Forecasts</a></li>
+							<li><a href="#">Numbers</a></li>
+						</ul>
+					</div>
+					<div class="col">
+						<h3>Company</h3>
+						<ul class="alt">
+							<li><a href="#">Terms & Conditions</a></li>
+							<li><a href="#">Privacy Policy</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="copyright">
+				<ul class="icons">
+					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
 				</ul>
-			</nav>
-            <div id="main">
-			<!-- Two -->
-				<section class="wrapper style2">
-					<div class="inner">
-                        <h2>Movies Release Date Calender:</h2><hr>
-						<div class="row">							
-							<div class="col select">
-								<select name="year" class="addselect" id="year">
-										<option value="2k21" class="l1">Year 2021</option>
-										<option value="2k20" class="l1"> 2020</option>
-										<option value="2k19" class="l1"> 2019</option>
-										<option value="2k18" class="l1"> 2018</option>
-										<option value="2k17" class="l1"> 2017</option>
-										<option value="2k16" class="l1"> 2016</option>
-										<option value="2k15" class="l1"> 2015</option>
-										<option value="2k14" class="l1"> 2014</option>
-										<option value="2k13" class="l1"> 2013</option>
-										<option value="2k12" class="l1"> 2012</option>
-										<option value="2k11" class="l1"> 2011</option>
-										<option value="2k10" class="l1"> 2010</option>
-								</select><br>
-                    		</div>
-						</div>
-						<table>
-							<tr>
-								<th class="ww">S.No.</th>
-                                <th class="ww ">Poster</th>
-								<th class="ww">Movie Name</th>
-								<th class="ww">Release Date</th>
-							</tr>
-							<tr>
-								<td>1.</td>
-								<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;" ><noscript><img src="images/ramp.jpg" width='70' height='90'  /></noscript><img class="lazyloaded" src="images/ramp.jpg" data-src="images/ramp.jpg" width="50" height="70" border="0"></a></td>
-                                <td><a href="detail.html">Ramprasad Ki Tehrvi</a></td>
-								<td>1st January</td>
-								</tr>
-							<tr>
-								<td>2.</td>
-                                <td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;" ><noscript><img src="images/kaag1.jpg" width='50' height='70' /></noscript><img class=" lazyloaded" src="images/kaag1.jpg" data-src="images/kaag1.jpg" width="50" height="70" border="0"></a></td>
-								<td><a href="detail.html">Kaagaz</a></td>
-								<td>7th January</td>
-							</tr>
-							<tr>
-								<td>3.</td>
-								<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;" ><noscript><img src="images/12.jpg" width='50' height='70' border="0" /></noscript><img class=" lazyloaded" src="images/12.jpg" data-src="images/12.jpg" width="50" height="70" border="0"></a></td>
-								<td><a href="detail.html">12 'O' clock</a></td>
-								<td>8th January</td>
-							</tr>
-							<tr>
-								<td>4.</td>
-								<td>The Power</td>
-								<td>14th January</td>
-							</tr>
-							<tr>
-								<td>5.</td>
-								<td>Tribhanga</td>
-								<td>15th January</td>
-							</tr>
-							<tr>
-								<td>5.</td>
-								<td>Madam Chief Minister</td>
-								<td>22nd January</td>
-							</tr>
-							<tr>
-								<td>6.</td>
-								<td>Aadhar</td>
-								<td>15th February</td>
-							</tr>
-							<tr>
-								<td>7.</td>
-								<td>XYZ</td>
-								<td>30th February</td>
-							</tr>
-							<tr>
-								<td>8.</td>
-								<td>ABC</td>
-								<td>13th March</td>
-							</tr>
-							<tr>
-								<td>9.</td>
-								<td>Aadhar</td>
-								<td>15th February</td>
-							</tr>
-						</table>
-					</div>
-
-                </section>
-        
-        <!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="flex flex-3">
-						<div class="col">
-							<h3>Box Office </h3>
-							<ul class="alt">
-								<li><a href="#">Magazine</a></li>
-								<li><a href="#">Numbers</a></li>
-								<li><a href="#">Movie Calender</a></li>
-								<li><a href="#">Subscribe</a></li>
-							</ul>
-						</div>
-						<div class="col">
-							<h3>Topics</h3>
-							<ul class="alt">
-								<li><a href="#">From the Magazine</a></li>
-								<li><a href="#">Tracking & Forecasts</a></li>
-								<li><a href="#">Numbers</a></li>
-							</ul>
-						</div>
-						<div class="col">
-							<h3>Company</h3>
-							<ul class="alt">
-								<li><a href="#">Terms & Conditions</a></li>
-								<li><a href="#">Privacy Policy</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="copyright">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
-					</ul>
-					&copy; Selfmade Design: <a href="#">On demand </a>. Images: <a href="https://unsplash.com">Coverr</a>. Video: <a href="https://coverr.co">Coverr</a>.
-				</div>
-			</footer>
+				&copy; Selfmade Design: <a href="#">On demand </a>. Images: <a href="https://unsplash.com">Coverr</a>.
+				Video: <a href="https://coverr.co">Coverr</a>.
+			</div>
+		</footer>
 
 		<!-- Scripts -->
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+			crossorigin="anonymous"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
