--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
 							<a href="detail.html" class="link"><span>Click Me</span></a>
 						</div>
 					</div>
+					<div  style="float:right;">
+						<a href="latest.html"><p class="flt"><b>+see more</b></p></a>
+					</div><br>
 				</div>
 			</div>
 		</section>
@@ -163,7 +166,7 @@
 									<h4>Overseas Box Office Collection </h4>
 								</a></li>
 							<li><a href="worldwide.html">
-									<h4>World-Wide Box Office Collection </h4>
+									<h4>Worldwide Box Office Collection </h4>
 								</a></li>
 							<li><a href="budget.html">
 									<h4>Budget Of The Movies </h4>
@@ -183,16 +186,17 @@
 						&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 					</div>
 					<div class="col car">
+						<h3>List Of Articles:</h3>
 						<div class="slideshow-container">
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bahubali2.jpg" width="320" height="550"></a>
+								<a href="detail.html"><img src="images/bahubali2.jpg" width="320" height="470"></a>
 							</div>
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bharat.jpg" width="320" height="550"></a>
+								<a href="detail.html"><img src="images/bharat.jpg" width="320" height="470"></a>
 							</div>
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bajrangi.jpg" width="320" height="550"></a>
+								<a href="detail.html"><img src="images/bajrangi.jpg" width="320" height="470"></a>
 							</div>
 	
 							<!-- Next and previous buttons -->
@@ -206,6 +210,9 @@
 							<span class="dot" onclick="currentSlide(2)"></span>
 							<span class="dot" onclick="currentSlide(3)"></span>
 						</div>
+						<div  style="float:right;">
+							<a href="#"><p class="flt"><b>+see more</b></p></a>
+						</div><br>
 					</div>
 				</div>
 			</div>
@@ -284,6 +291,9 @@
 							<a href="detail.html" class="link"><span>Click Me</span></a>
 						</div>
 					</div>
+					<div  style="float:right;">
+						<a href="past.html"><p class="flt"><b>+see more</b></p></a>
+					</div><br>
 				</div>
 			</div>
 		</section>
@@ -327,7 +337,8 @@
 				<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
 			</ul>
-			&copy;Design By: <a href="#">Tech Market</a>.
+			&copy; Techmarket Design: <a href="#">On Demand </a>. Images: <a href="https://unsplash.com">Coverr</a>.
+			Video: <a href="https://coverr.co">Coverr</a>.
 		</div>
 	</footer>
 
