--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 						&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 					</div>
 					<div class="col car">
-						<h3>List Of Articles:</h3>
+						<h3>List Of Articles:</h3><hr>
 						<div class="slideshow-container">
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
