--- a/Domestic Box Office Collection/dom_circuit.html
+++ b/Domestic Box Office Collection/dom_circuit.html
@@ -7,10 +7,10 @@
 <html>
 
 <head>
-	<title>Film - Stats: Movies Release Calender</title>
+	<title>Film - Stats: Highest Circuit-Wise Collection</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="../assets/css/main.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -18,29 +18,34 @@
 
 	<!-- Header -->
 	<header id="header">
-		<h1><a href="index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
+		<h1><a href="../index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
 		<a href="#menu">Menu</a>
 	</header>
 
 	<!-- Nav -->
 	<nav id="menu">
 		<ul class="links">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About Us </a></li>
-			<li><a href="login.html">Login/Register</a></li>
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="../about.html">About Us </a></li>
+			<li><a href="../login.html">Login/Register</a></li>
 		</ul>
 	</nav>
 	<div id="main">
 		<!-- Two -->
 		<section class="wrapper style2">
 			<div class="inner">
-				<a href="calender.html"><h2>Release Date Calender Of Movies:</h2></a>
+				<a href="../domestic.html">
+					<h2>Domestic Box Office Collection:</h2>
+				</a>
 				<hr>
+				<h3>Highest Circuit-Wise Nett Collection:</h3>
+				<hr>
+				<h3>Highest Mumbai/Gujrat Nett Collection:</h3>
 				<div class="row">
 					<div class="col select ss2">
 						<select name="year" class="addselect" id="year">
-							<option value="2k21" class="l1">Year</option>
-							<option value="2k21" class="l1">2021</option>
+							<option value="2k21" class="l1"> Year</option>
+							<option value="2k21" class="l1"> 2021</option>
 							<option value="2k20" class="l1"> 2020</option>
 							<option value="2k19" class="l1"> 2019</option>
 							<option value="2k18" class="l1"> 2018</option>
@@ -57,37 +62,48 @@
 				</div>
 				<table class="tab12">
 					<tr>
-						<th class="ww">S.No.</th>
-						<th class="ww ">Poster</th>
-						<th class="ww">Movie Name</th>
-						<th class="ww">Release Date</th>
+						<th width="5%"  valign="middle" class="ww">Rank</th>
+						<th width="15%"  valign="middle" class="ww ">Poster</th>
+						<th width="25%"  valign="middle" class="ww">Movie Name</th>
+						<th width="15%"  valign="middle" class="ww">Release Date</th>
+						<th width="15%"  valign="middle" class="ww">Mumbai/Gujrat</th>
+						<th width="20%"  valign="middle" class="ww">Lifetime Nett</th>
 					</tr>
 					<tr>
 						<td>1.</td>
-						<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
-										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="images/ramp.jpg" data-src="images/ramp.jpg" width="50"
-									height="70" ></a></td>
-						<td><a href="detail.html">Ramprasad Ki Tehrvi</a></td>
-						<td>1st January</td>
+						<td><a href="../detail.html"
+								style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="../images/bahubali2.jpg" width='50' height='70' /></noscript><img
+									class=" lazyloaded" src="../images/bahubali2.jpg" data-src="../images/bahubali2.jpg"
+									width="50" height="70"></a></td>
+						<td><a href="../detail.html">Bahubali 2 [Hindi]</a></td>
+						<td>2nd Oct , 19</td>
+						<td><span>&#8377;</span>185.76 Cr.</td>
+						<td><span>&#8377;</span>510.36 Cr.</td>
 					</tr>
 					<tr>
 						<td>2.</td>
-						<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
-										src="images/kaag1.jpg" width='50' height='70' /></noscript><img
-									class=" lazyloaded" src="images/kaag1.jpg" data-src="images/kaag1.jpg" width="50"
-									height="70" ></a></td>
-						<td><a href="detail.html"></a>Kaagaz</a></td>
-						<td>7th January</td>
+						<td><a href="../detail.html"
+								style="clear: left; float: left; margin-bottom: -1em; "><noscript><img
+										src="../images/tanhaji.jpg" width='50' height='70' /></noscript><img
+									class=" lazyloaded" src="../images/tanhaji.jpg" data-src="../images/tanhaji.jpg"
+									width="50" height="70"></a></td>
+						<td><a href="../detail.html">Tanhaji</a></td>
+						<td>10th Jan , 20</td>
+						<td><span>&#8377;</span>143.85 Cr.</td>
+						<td><span>&#8377;</span>269.77 Cr.</td>
 					</tr>
 					<tr>
 						<td>3.</td>
-						<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
-										src="images/12.jpg" width='50' height='70' border="0" /></noscript><img
-									class=" lazyloaded" src="images/12.jpg" data-src="images/12.jpg" width="50"
-									height="70" ></a></td>
-						<td><a href="detail.html">12 'O' clock</a></td>
-						<td>8th January</td>
+						<td><a href="../detail.html"
+								style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="../images/dangal.jpg" width='50' height='70' /></noscript><img
+									class=" lazyloaded" src="../images/dangal.jpg" data-src="../images/dangal.jpg"
+									width="50" height="70"></a></td>
+						<td><a href="../detail.html">Dangal</a></td>
+						<td>23rd Dec , 16</td>
+						<td><span>&#8377;</span>104.26 Cr.</td>
+						<td><span>&#8377;</span>387.29 Cr.</td>
 					</tr>
 				</table>
 				<div class="wrp">
@@ -95,14 +111,14 @@
 						<div class="col">
 							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="images/ramp.jpg" data-src="images/ramp.jpg" width="70"
+									class="lazyloaded" src="../images/bahubali2.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>1.</b>&nbsp;&nbsp;<a href="detail.html"><b>Ramprasad Ki Tehrvi</b></a><br>
-								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Screens:</b>&nbsp;&nbsp; 3850<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; 50612000
+							<p class="sz"><b>1.</b>&nbsp;&nbsp;<a href="detail.html"><b>Bahubali 2 [Hindi]</b></a><br>
+								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;2 Oct 2019<br></a>
+								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.<br>
+								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.
 							</p>
 						</div>
 					</div><br>
@@ -110,14 +126,29 @@
 						<div class="col">
 							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="images/kaag1.jpg" data-src="images/ramp.jpg" width="70"
+									class="lazyloaded" src="../images/tanhaji.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>2.</b>&nbsp;&nbsp;<a href="detail.html"><b>Kaagaz</b></a><br>
-								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Screens:</b>&nbsp;&nbsp; 3850<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; 50612000
+							<p class="sz"><b>2.</b>&nbsp;&nbsp;<a href="detail.html"><b>Tanhaji</b></a><br>
+								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;10 Jan 2020<br></a>
+								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.<br>
+								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.
+							</p>
+						</div>
+					</div><br>
+					<div class="row">
+						<div class="col">
+							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="../images/bahubali2.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="../images/dangal.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b>3.</b>&nbsp;&nbsp;<a href="detail.html"><b>Dangal</b></a><br>
+								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;23 Dec 2016<br></a>
+								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.<br>
+								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.
 							</p>
 						</div>
 					</div><br>
@@ -125,29 +156,14 @@
 						<div class="col">
 							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="images/12.jpg" data-src="images/ramp.jpg" width="70"
+									class="lazyloaded" src="../images/bahubali2.jpg" data-src="images/ramp.jpg" width="70"
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>3.</b>&nbsp;&nbsp;<a href="detail.html"><b>12 'O' Clock</b></a><br>
-								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Screens:</b>&nbsp;&nbsp; 3850<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; 50612000
-							</p>
-						</div>
-					</div><br>
-					<div class="row">
-						<div class="col">
-							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
-										src="images/ramp.jpg" width='70' height='90' /></noscript><img
-									class="lazyloaded" src="images/simmba.jpg" data-src="images/ramp.jpg" width="70"
-									height="90"></a>
-						</div>
-						<div class="col">
-							<p class="sz"><b>4.</b>&nbsp;&nbsp;<a href="detail.html"><b>Simmba</b></a><br>
-								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Screens:</b>&nbsp;&nbsp; 3850<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; 50612000
+							<p class="sz"><b>4.</b>&nbsp;&nbsp;<a href="detail.html"><b>Bahubali 2 [Hindi]</b></a><br>
+								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;2 Oct 2019<br></a>
+								<b>Mumbai/Gujrat:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.<br>
+								<b>Nett Gross:</b>&nbsp;&nbsp; <span>&#8377;</span>185.76 Cr.
 							</p>
 						</div>
 					</div><br>
@@ -201,11 +217,11 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
 			crossorigin="anonymous"></script>
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+		<script src="../assets/js/jquery.min.js"></script>
+		<script src="../assets/js/jquery.scrolly.min.js"></script>
+		<script src="../assets/js/skel.min.js"></script>
+		<script src="../assets/js/util.js"></script>
+		<script src="../assets/js/main.js"></script>
 
 </body>
 
