--- a/calender.html
+++ b/calender.html
@@ -34,12 +34,13 @@
 		<!-- Two -->
 		<section class="wrapper style2">
 			<div class="inner">
-				<h2>Movies Release Date Calender:</h2>
+				<a href="calender.html"><h2>Release Date Calender Of Movies:</h2></a>
 				<hr>
 				<div class="row">
-					<div class="col select">
+					<div class="col select ss2">
 						<select name="year" class="addselect" id="year">
-							<option value="2k21" class="l1">Year 2021</option>
+							<option value="2k21" class="l1">Year</option>
+							<option value="2k21" class="l1"> as2021</option>
 							<option value="2k20" class="l1"> 2020</option>
 							<option value="2k19" class="l1"> 2019</option>
 							<option value="2k18" class="l1"> 2018</option>
@@ -66,7 +67,7 @@
 						<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/ramp.jpg" width='70' height='90' /></noscript><img
 									class="lazyloaded" src="images/ramp.jpg" data-src="images/ramp.jpg" width="50"
-									height="70" border="0"></a></td>
+									height="70" ></a></td>
 						<td><a href="detail.html">Ramprasad Ki Tehrvi</a></td>
 						<td>1st January</td>
 					</tr>
@@ -75,7 +76,7 @@
 						<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/kaag1.jpg" width='50' height='70' /></noscript><img
 									class=" lazyloaded" src="images/kaag1.jpg" data-src="images/kaag1.jpg" width="50"
-									height="70" border="0"></a></td>
+									height="70" ></a></td>
 						<td><a href="detail.html"></a>Kaagaz</a></td>
 						<td>7th January</td>
 					</tr>
@@ -84,44 +85,9 @@
 						<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
 										src="images/12.jpg" width='50' height='70' border="0" /></noscript><img
 									class=" lazyloaded" src="images/12.jpg" data-src="images/12.jpg" width="50"
-									height="70" border="0"></a></td>
+									height="70" ></a></td>
 						<td><a href="detail.html">12 'O' clock</a></td>
 						<td>8th January</td>
-					</tr>
-					<tr>
-						<td>4.</td>
-						<td>The Power</td>
-						<td>14th January</td>
-					</tr>
-					<tr>
-						<td>5.</td>
-						<td>Tribhanga</td>
-						<td>15th January</td>
-					</tr>
-					<tr>
-						<td>5.</td>
-						<td>Madam Chief Minister</td>
-						<td>22nd January</td>
-					</tr>
-					<tr>
-						<td>6.</td>
-						<td>Aadhar</td>
-						<td>15th February</td>
-					</tr>
-					<tr>
-						<td>7.</td>
-						<td>XYZ</td>
-						<td>30th February</td>
-					</tr>
-					<tr>
-						<td>8.</td>
-						<td>ABC</td>
-						<td>13th March</td>
-					</tr>
-					<tr>
-						<td>9.</td>
-						<td>Aadhar</td>
-						<td>15th February</td>
 					</tr>
 				</table>
 				<div class="wrp">
@@ -133,10 +99,10 @@
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>1.</b>Ramprasad Ki Tehrvi<br>
-								<b>Release Date:</b>1 Jan 2021<br>
-								<b>Screens:</b> 3850<br>
-								<b>Nett Gross:</b> 50612000
+							<p class="sz"><b>1.</b>&nbsp;&nbsp;<a href="detail.html"><b>Ramprasad Ki Tehrvi</b></a><br>
+								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
+								<b>Screens:</b>&nbsp;&nbsp; 3850<br>
+								<b>Nett Gross:</b>&nbsp;&nbsp; 50612000
 							</p>
 						</div>
 					</div><br>
@@ -148,10 +114,10 @@
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>2.</b>Kaagaz<br>
-								<b>Release Date:</b>7 Jan 2021<br>
-								<b>Screens:</b> 3850<br>
-								<b>Nett Gross:</b> 50612000
+							<p class="sz"><b>2.</b>&nbsp;&nbsp;<a href="detail.html"><b>Kaagaz</b></a><br>
+								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
+								<b>Screens:</b>&nbsp;&nbsp; 3850<br>
+								<b>Nett Gross:</b>&nbsp;&nbsp; 50612000
 							</p>
 						</div>
 					</div><br>
@@ -163,10 +129,10 @@
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>1.</b>12 'O' Clock<br>
-								<b>Release Date:</b>8 Jan 2021<br>
-								<b>Screens:</b> 3850<br>
-								<b>Nett Gross:</b> 50612000
+							<p class="sz"><b>3.</b>&nbsp;&nbsp;<a href="detail.html"><b>12 'O' Clock</b></a><br>
+								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
+								<b>Screens:</b>&nbsp;&nbsp; 3850<br>
+								<b>Nett Gross:</b>&nbsp;&nbsp; 50612000
 							</p>
 						</div>
 					</div><br>
@@ -178,10 +144,10 @@
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>1.</b>Thugs Of Hindustan<br>
-								<b>Release Date:</b>2 Oct 2019<br>
-								<b>Screens:</b> 3850<br>
-								<b>Nett Gross:</b> 50612000
+							<p class="sz"><b>4.</b>&nbsp;&nbsp;<a href="detail.html"><b>Simmba</b></a><br>
+								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
+								<b>Screens:</b>&nbsp;&nbsp; 3850<br>
+								<b>Nett Gross:</b>&nbsp;&nbsp; 50612000
 							</p>
 						</div>
 					</div><br>
