--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 						</div>
 					</div>
 					<div  style="float:right;">
-						<a href="latest.html"><p class="flt"><b>+see more</b></p></a>
+						<a href="latest.html"><p class="flt"><b>+&nbsp;&nbsp;See More</b></p></a>
 					</div><br>
 				</div>
 			</div>
@@ -186,17 +186,17 @@
 						&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 					</div>
 					<div class="col car">
-						<h3>List Of Articles:</h3><hr>
+						<h2>Boxoffice Report & Articles:</h2><hr>
 						<div class="slideshow-container">
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bahubali2.jpg" width="320" height="470"></a>
+								<a href="detail.html"><img src="images/bahubali2.jpg" width="340" height="470"></a>
 							</div>
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bharat.jpg" width="320" height="470"></a>
+								<a href="detail.html"><img src="images/bharat.jpg" width="340" height="470"></a>
 							</div>
 							<div class="mySlides fade">
-								<a href="detail.html"><img src="images/bajrangi.jpg" width="320" height="470"></a>
+								<a href="detail.html"><img src="images/bajrangi.jpg" width="340" height="470"></a>
 							</div>
 	
 							<!-- Next and previous buttons -->
@@ -211,7 +211,7 @@
 							<span class="dot" onclick="currentSlide(3)"></span>
 						</div>
 						<div  style="float:right;">
-							<a href="#"><p class="flt"><b>+see more</b></p></a>
+							<a href="#"><p class="flt"><b>+&nbsp;&nbsp;See More</b></p></a>
 						</div><br>
 					</div>
 				</div>
@@ -292,7 +292,7 @@
 						</div>
 					</div>
 					<div  style="float:right;">
-						<a href="past.html"><p class="flt"><b>+see more</b></p></a>
+						<a href="past.html"><p class="flt"><b>+&nbsp;&nbsp;See More</b></p></a>
 					</div><br>
 				</div>
 			</div>
@@ -332,13 +332,11 @@
 		</div>
 		<div class="copyright">
 			<ul class="icons">
-				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
+				<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+				<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 			</ul>
-			&copy; Techmarket Design: <a href="#">On Demand </a>. Images: <a href="https://unsplash.com">Coverr</a>.
-			Video: <a href="https://coverr.co">Coverr</a>.
+			&copy; Design By: <a href="#">Tech_Marketz</a>   
 		</div>
 	</footer>
 
