more feild added

--- a/calender.html
+++ b/calender.html
@@ -40,7 +40,7 @@
 					<div class="col select ss2">
 						<select name="year" class="addselect" id="year">
 							<option value="2k21" class="l1">Year</option>
-							<option value="2k21" class="l1"> as2021</option>
+							<option value="2k21" class="l1"> 2021</option>
 							<option value="2k20" class="l1"> 2020</option>
 							<option value="2k19" class="l1"> 2019</option>
 							<option value="2k18" class="l1"> 2018</option>
@@ -57,10 +57,12 @@
 				</div>
 				<table class="tab12">
 					<tr>
-						<th class="ww">S.No.</th>
-						<th class="ww ">Poster</th>
-						<th class="ww">Movie Name</th>
-						<th class="ww">Release Date</th>
+						<th class="ww"><a href="#">S.No.</a></th>
+						<th class="ww "><a href="#">Poster</a></th>
+						<th class="ww"><a href="#">Movie Name</a></th>
+						<th class="ww"><a href="calender.html">Release Date</a></th>
+						<th class="ww"><a href="Domestic Box Office Collection/dom_lifetime_nett.html">Domestic Lifetime Nett</a></th>
+						<th class="ww"><a href="verdict.html">Verdict</a></th>
 					</tr>
 					<tr>
 						<td>1.</td>
@@ -70,6 +72,8 @@
 									height="70" ></a></td>
 						<td><a href="detail.html">Ramprasad Ki Tehrvi</a></td>
 						<td>1st January</td>
+						<td><span>&#8377;</span>185.76 Cr.</td>
+						<td>ATBB</td>
 					</tr>
 					<tr>
 						<td>2.</td>
@@ -79,6 +83,8 @@
 									height="70" ></a></td>
 						<td><a href="detail.html"></a>Kaagaz</a></td>
 						<td>7th January</td>
+						<td><span>&#8377;</span>185.76 Cr.</td>
+						<td>ATBB</td>
 					</tr>
 					<tr>
 						<td>3.</td>
@@ -88,9 +94,11 @@
 									height="70" ></a></td>
 						<td><a href="detail.html">12 'O' clock</a></td>
 						<td>8th January</td>
+						<td><span>&#8377;</span>185.76 Cr.</td>
+						<td>BB</td>
 					</tr>
 				</table>
-				<div class="wrp">
+				<div class="wrp"><hr>
 					<div class="row">
 						<div class="col">
 							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
@@ -99,13 +107,13 @@
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>1.</b>&nbsp;&nbsp;<a href="detail.html"><b>Ramprasad Ki Tehrvi</b></a><br>
+							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Ramprasad Ki Tehrvi</b></a><br>
 								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Screens:</b>&nbsp;&nbsp; 3850<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; 50612000
+								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>185.76 Cr.<br>
+								<b>Verdict:</b>&nbsp;&nbsp;Disaster
 							</p>
 						</div>
-					</div><br>
+					</div><hr>
 					<div class="row">
 						<div class="col">
 							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
@@ -114,13 +122,13 @@
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>2.</b>&nbsp;&nbsp;<a href="detail.html"><b>Kaagaz</b></a><br>
+							<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Kaagaz</b></a><br>
 								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Screens:</b>&nbsp;&nbsp; 3850<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; 50612000
+								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>185.76 Cr.<br>
+								<b>Verdict:</b>&nbsp;&nbsp;Disaster
 							</p>
 						</div>
-					</div><br>
+					</div><hr>
 					<div class="row">
 						<div class="col">
 							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
@@ -129,13 +137,13 @@
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>3.</b>&nbsp;&nbsp;<a href="detail.html"><b>12 'O' Clock</b></a><br>
+							<p class="sz"><b class="sx">3.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">12 'O' Clock</b></a><br>
 								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Screens:</b>&nbsp;&nbsp; 3850<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; 50612000
+								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>185.76 Cr.<br>
+								<b>Verdict:</b>&nbsp;&nbsp;Disaster
 							</p>
 						</div>
-					</div><br>
+					</div><hr>
 					<div class="row">
 						<div class="col">
 							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
@@ -144,13 +152,13 @@
 									height="90"></a>
 						</div>
 						<div class="col">
-							<p class="sz"><b>4.</b>&nbsp;&nbsp;<a href="detail.html"><b>Simmba</b></a><br>
+							<p class="sz"><b class="sx">4.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Simmba</b></a><br>
 								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Screens:</b>&nbsp;&nbsp; 3850<br>
-								<b>Nett Gross:</b>&nbsp;&nbsp; 50612000
+								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>185.76 Cr.<br>
+								<b>Verdict:</b>&nbsp;&nbsp;Disaster
 							</p>
 						</div>
-					</div><br>
+					</div><hr>
 				</div>
 			</div>
 		</section>
@@ -187,13 +195,11 @@
 			</div>
 			<div class="copyright">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
+					<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				&copy; Selfmade Design: <a href="#">On demand </a>. Images: <a href="https://unsplash.com">Coverr</a>.
-				Video: <a href="https://coverr.co">Coverr</a>.
+				&copy; Design By: <a href="#">Tech_Marketz</a>   
 			</div>
 		</footer>
 
