--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<div class="col sr">
 						<input type="text" placeholder="Search">
 					</div>
-					<div class="col">
+					<div class="col slct">
 						<select name="srch" id="srch">
 							<option value="all" class="l1">All </option>
 							<option value="actor" class="l1">Movies</option>
@@ -186,7 +186,7 @@
 						&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 					</div>
 					<div class="col car">
-						<h2>Boxoffice Report & Articles:</h2><hr>
+						<h2>Box Office Reports & Articles:</h2><hr>
 						<div class="slideshow-container">
 							<!-- Full-width images with number and caption text -->
 							<div class="mySlides fade">
