--- a/calender.html
+++ b/calender.html
@@ -71,9 +71,9 @@
 									class="lazyloaded" src="images/ramp.jpg" data-src="images/ramp.jpg" width="50"
 									height="70" ></a></td>
 						<td><a href="detail.html">Ramprasad Ki Tehrvi</a></td>
-						<td>1st January</td>
-						<td><span>&#8377;</span>185.76 Cr.</td>
-						<td>ATBB</td>
+						<td>1 Jan 2021</td>
+						<td><span>&#8377;</span>&nbsp;185.76 Cr</td>
+						<td>All Time Blockbuster</td>
 					</tr>
 					<tr>
 						<td>2.</td>
@@ -82,9 +82,9 @@
 									class=" lazyloaded" src="images/kaag1.jpg" data-src="images/kaag1.jpg" width="50"
 									height="70" ></a></td>
 						<td><a href="detail.html"></a>Kaagaz</a></td>
-						<td>7th January</td>
-						<td><span>&#8377;</span>185.76 Cr.</td>
-						<td>ATBB</td>
+						<td>7 Jan 2021</td>
+						<td><span>&#8377;</span>&nbsp;185.76 Cr</td>
+						<td>All Time Blockbuster</td>
 					</tr>
 					<tr>
 						<td>3.</td>
@@ -93,9 +93,9 @@
 									class=" lazyloaded" src="images/12.jpg" data-src="images/12.jpg" width="50"
 									height="70" ></a></td>
 						<td><a href="detail.html">12 'O' clock</a></td>
-						<td>8th January</td>
-						<td><span>&#8377;</span>185.76 Cr.</td>
-						<td>BB</td>
+						<td>8 Jan 2021</td>
+						<td><span>&#8377;</span>&nbsp;185.76 Cr</td>
+						<td>Blockbuster</td>
 					</tr>
 				</table>
 				<div class="wrp"><hr>
@@ -109,7 +109,7 @@
 						<div class="col">
 							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Ramprasad Ki Tehrvi</b></a><br>
 								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>185.76 Cr.<br>
+								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
 								<b>Verdict:</b>&nbsp;&nbsp;Disaster
 							</p>
 						</div>
@@ -124,7 +124,7 @@
 						<div class="col">
 							<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Kaagaz</b></a><br>
 								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>185.76 Cr.<br>
+								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
 								<b>Verdict:</b>&nbsp;&nbsp;Disaster
 							</p>
 						</div>
@@ -139,7 +139,7 @@
 						<div class="col">
 							<p class="sz"><b class="sx">3.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">12 'O' Clock</b></a><br>
 								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>185.76 Cr.<br>
+								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
 								<b>Verdict:</b>&nbsp;&nbsp;Disaster
 							</p>
 						</div>
@@ -154,7 +154,7 @@
 						<div class="col">
 							<p class="sz"><b class="sx">4.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Simmba</b></a><br>
 								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>185.76 Cr.<br>
+								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
 								<b>Verdict:</b>&nbsp;&nbsp;Disaster
 							</p>
 						</div>
