--- a/calender.html
+++ b/calender.html
@@ -98,7 +98,7 @@
 						<td>Blockbuster</td>
 					</tr>
 				</table>
-				<div class="wrp"><hr>
+				<div class="wrp">
 					<div class="row">
 						<div class="col">
 							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
