--- a/calender.html
+++ b/calender.html
@@ -109,8 +109,8 @@
 						<div class="col">
 							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Ramprasad Ki Tehrvi</b></a><br>
 								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
-								<b>Verdict:</b>&nbsp;&nbsp;Disaster
+								<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<a href="verdict.html"><b>Verdict:</b></a>&nbsp;&nbsp;Disaster
 							</p>
 						</div>
 					</div><hr>
@@ -124,8 +124,8 @@
 						<div class="col">
 							<p class="sz"><b class="sx">2.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Kaagaz</b></a><br>
 								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
-								<b>Verdict:</b>&nbsp;&nbsp;Disaster
+								<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<a href="verdict.html"><b>Verdict:</b></a>&nbsp;&nbsp;Disaster
 							</p>
 						</div>
 					</div><hr>
@@ -139,8 +139,8 @@
 						<div class="col">
 							<p class="sz"><b class="sx">3.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">12 'O' Clock</b></a><br>
 								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
-								<b>Verdict:</b>&nbsp;&nbsp;Disaster
+								<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<a href="verdict.html"><b>Verdict:</b></a>&nbsp;&nbsp;Disaster
 							</p>
 						</div>
 					</div><hr>
@@ -154,8 +154,8 @@
 						<div class="col">
 							<p class="sz"><b class="sx">4.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Simmba</b></a><br>
 								<b>Release Date:</b><a href="calender.html">&nbsp;&nbsp;1 Jan 2021<br></a>
-								<b>Lifetime Nett:</b>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
-								<b>Verdict:</b>&nbsp;&nbsp;Disaster
+								<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
+								<a href="verdict.html"><b>Verdict:</b></a>&nbsp;&nbsp;Disaster
 							</p>
 						</div>
 					</div><hr>
